# intrinsic_benchmarks

./: CMakeLists.txt  add.c  add_mul.c  makefile  pearson.c  readme.md
functions/: Makefile  benchmark_functions.c  pow.c
loop/: Makefile  loop.c
pearson/: add.s  add_mul.s  pearson.s
src/: add.c  add_mul.c  pearson.c
